transcript 037-Felipe-Coelho-Kussik

--- a/_pages/podcast-episodes/ep-037.md
+++ b/_pages/podcast-episodes/ep-037.md
@@ -11,4 +11,353 @@ image: /images/guests/whats-up-felipe.png
 show: false
 ---
 
-Coming Soon
+Dave: Hey, everybody, this is an interesting episode. We're trying a little experiment. Felipe, our UX designer, joins me. And we're talking about media reduction, social media reduction, as in reducing the amount of time spent on social media. The idea here is that Felipe and I have interesting discussions, and I thought they would be valuable to share. 
+
+
+
+Sometimes they're not necessarily 100% related to technology startups, or technology work. But usually they're related to, I don't know kind of the way UX works in your real life. So designing your own user experience with life. I'd really like some feedback. So if you enjoyed it, if you didn't enjoy it, if there's a specific topic you'd be interested in hearing us talk about, let me know. Twitter is good, or email is fine as well. So @dave_albert on Twitter, or podcast@dave-Albert.com. Enjoy.
+ 
+Dave: Hello, and welcome to the podcast. I'm your host, Dave Albert. In this show, I talk about technology, building a company as a CTO and co-founder, and have guests to discuss their roles in technology and entrepreneurship.
+ 
+Today, we're going to try something a little different. Felipe, our UX designer, who, hopefully, you've listened to the episode a couple of months ago. Oh, yeah, maybe more than that has joined us again. But we're going to make him a little bit of a regular. And I guess this is kind of a segment that they'll call what's up Felipe?
+ 
+Felipe: What's up Dave?
+ 
+Dave: What's on your mind? What sort of things have kind of so Felipe not often talk about productivity tips, and not even just productivity tips, but just how to survive in the new world? 
+
+
+
+
+
+Felipe: The New World
+
+
+
+
+
+Dave: The new world. Just how to not lose your mind with all the things that are going on? So
+ 
+Felipe: Yeah, we do talk a lot about that. And they usually start with Dave asking. What's up? usually meaning something like, directly related to work like something that we're working on or like, a specific issue, and then we end up going to dislike long in deep conversations about stuff that not always related to what we started on, but it's always enjoyable.
+ 
+Dave: And I think it makes us better people.
+ 
+Felipe: Yeah, but I, it does make me like, just talking in, in hearing different experiences. Sure does. Yeah. Yeah. I mean, I think I have an idea where we can start. It's something that you mentioned last week, I think, remember and I eat something that I go through frequently, which is you mentioned that you're taking some time off social media. Is that, a can you? I think, if you want of, and that that's all it was, I know, so this is not like, we're like, hey, Dave do you remember. It's like I, I've been meaning to talk to you about that. And I thought it could be it could be something for us to start?
+ 
+Dave: Yeah, so I noticed I was spending time I didn't have on things I didn't care about. Pretty much as most of the social media,
+ 
+Felipe: I know exactly what you mean.
+ 
+Dave: You know, the value that I was getting was very minimal. And the things that would snag my attention, were always just negativity. And they added no value. I would either I wasn't even I'm not even the type to really get in arguments. But I would ask questions that I didn't really care about the answer to,
+ 
+Felipe: You know, you know, social media.
+ 
+Dave: Yeah, yeah. Yeah. But like, like a specific question to by that, do you mean this? Or how does that apply to it? And it really, it was like, what the outcome is? Nothing. And it was just it was a controversial topic or
+ 
+Felipe: It doesn't really help like the discussion. He does like nothing. It just makes you more. You are personally more annoyed and more.
+ 
+Dave: Yes, yeah. Yeah. It's not going to change anybody's mind. It, I even you know, coming at things with an open mind. Like it didn't, it did not help me at all. And so a couple of things I did was like, I noticed that nothing attracted my attention on Facebook, except for conversations that no value was going to come out of. And I did.
+
+
+
+
+
+I never wasn't a huge Facebook user. But you know, it's pretty much the only place I could see what my kids are up. So I would be there and Okay, there's kids, there's kids, there's, what's this conversation? What? No, that can't be. That's not absolute. That's not wait, why am I going down this hole. So I just basically just stopped going and deleted the app. 
+
+
+
+
+
+I have still got Twitter, because we've got things on the podcast, and I contact people. But I barely do anything other than direct message people now. I have set, triple tapping my home button on my iPhone to switch between black and white color, because that's a thing that heard that the color triggers the domain. So if you look at something on any of those social platforms that you don't want to dig into, yeah, but that there is something necessary that you want to to be able to see that then it will not be as likely to pull you into the abyss. And that's really, that's been wailing. I don't know how often now I'll just be sitting there. Pull up my phone. And then just take my phone back in my pocket, because there's nothing get on to. You know, it's like when you get to that point where there's just I can't do any more work.
+ 
+Felipe: Yeah. You need something?
+ 
+Dave: Yeah. It's like I just I've done all the work I can do today. I can't even think about try. If I try to respond to an email, it's going to be a half-assed answer it.` 
+ 
+Felipe: no, That shouldn't do it. 
+ 
+Dave: It's just I just need to rest man. The way I used to rest was, well, I thought I was resting. 
+ 
+Felipe: mindlessly scrolling twitter and Instagram. Yeah, I know. Like, I know exactly what you mean. Because I've been there, and I am there. Because it changes. And that's when you mentioned your social media time off. I was I think next day like I read an article about the first there's a lot going on, you said that I think will get back to there's like a bunch and I do talk a lot about I think too much about this social media thing. 
+
+
+
+
+
+Like he was saying like he was talking about what happens when you do all those things when you like, you move Twitter from your home screen to like a heated folder on your phone. And then you set up limits, like, only 15 minutes a day or, and then when you do the black and white thing in, like, when you install the app, like what happened in I've installed apps in like, he was saying that what usually happens is that you end up using the web version. 
+
+
+
+
+
+Yeah, on your phone, because then you kind of go there. So like, Yeah, because it's something that we do because it's not, it's not a fair fight. So just about like, like, oh, I can't know, it's like it, those things are designed to keep us there. And and and the more time we spend on it, that's how they make money really. So there's no interest in, in us not being their own on their part, even though they are starting to say that they care now like Instagram as the year all done, or Facebook, they're, they're using a lot this phrase, time well spent.
+ 
+This I think that's, that's bullshit really like it does, it's like it's not, they're just going to change the way we interact. But I think we're going to spend will end up spending even more time there like Instagram remove likes for like, improve, it's not so much about time to like, make you more like, I don't know, less interest or I don't think those, I don't think they have good intentions when they're doing that I think they're going like they're seeing that people are more worried about it with the reason like we have reason to worry about.
+
+
+
+
+
+But I don't think anything that they do can help us. I don't think the answer to the problem is in any design decision that they take or any because they're, they're all their business model is broken. So so there's nothing like there are no tweaks that they can do that will solve this. So and the guy was saying then that you basically try all these, all these things, and in like changing places and all that in limits, and you end up in this, kind of halfway like you, you've used the browser and then you kind of you're almost like cheating your own thing.
+
+
+
+
+
+And I thought there was there was interesting because that's where I was that that's where I end up ended up with Instagram. For a while. I was like I can use this, I'm using this too much. I'm going to delete your account and then I delete it and then like I just go to the browser after a few days, I'll just go to the browser and then the browser is worse so I just download the app again and then I, It's like do you know what I mean like like
+ 
+Dave: oh yeah, absolutely doing exactly the same thing not with Instagram but with a couple other
+ 
+Felipe: yeah and like I like so basically like I say I don't think the solution is on their part I don't mean like a solution for you to use less your phone is on your phone like you're not there's no planning to a certain point maybe but I don't think I don't think that that's where it is like what I found that has helped me to use less is to make that make them less interesting to me.
+
+
+
+
+
+Which basically because like it so if you think it Twitter and Instagram it's mainly you who are making you you're starting with people you fall. Of course, you get like a lot of related content and in replies and like trending topics and all that but you start with people you follow was there you chose to follow. Instagram is where maybe even more because it's there's less noise there than there is on Twitter because replies and threads and all that but I don't know, it starts with you choosing people to follow or like, even not just people because the way we use in the way like I used was like oh no I'm gonna say I'm gonna use Twitter now is like a feed reader. When sorry, did you? You did that?
+ 
+Dave: I did that with Facebook. 
+ 
+Felipe: Yeah, yeah.I, so I don't think that works. It didn't work for me it like them because they're changing all the time. You just make you just stay there getting more content that you believe it's relevant. Yeah. And it's not I don't like, I mean, maybe, but I don't think it's, it's, it's a good use of your time. So basically, I started on following a bunch of people in like, kind of creating these rules. Also, like I create rules is just like guidelines for me. 
+
+
+
+
+
+Like, I will follow like brains anymore. Like, not not, not like anything it's just because of the amount of stuff that's coming in. Yeah. So I think that the that's helped. So by making it less interesting. I just don't go there anymore. In I'm, in I'm, in I'm making more like I'm finding more interesting content, using different ways than just waiting to recommend stuff.
+ 
+Dave: As one the thing I've done with Twitter recently because I toyed with the idea of just like unfollowing, I actually did unfollow a bunch of accounts that I never interacted with. And I really didn't care about their content. But yeah, you know, it's over 7, 8, 9 years, however long in there. But there were a lot of people I wanted to stay connected with, just so that I could find them easily.
+
+
+
+
+
+So what I did was stop using the feed as the place where I go for content. And I actually have a list that I use that is specifically people that I want to know, yeah, what they have to say, I created a Zapier, zap where works into a Slack channel. The only problem is that the zap gets reaches its limit in like, three or four days, for the month. 
+ 
+Felipe: Well wait, wait, wait what are you saying you need to slack, the
+ 
+Dave: So anyone on that, that list? Okay, everyone's tweets from that list go into slack. Okay, just as a private Slack channel of mine, just so that I have one place where I can look at it. Okay, and so like, one of the things that frustrated me was, if two people that I used to have notifications, like Twitter notifications would tweet something. And I would slide to look at the one at one of those people's tweets, I'd lose that notification. 
+
+
+
+
+
+I couldn't figure out who the other person who said, Give. If you and I both tweeted, it's the same, you know, in a similar time. And somebody had notifications for both of us. And they tried to look at yours. Then they'd have to remember, oh, who's the other person? I can't remember.  And then have to go through look at all the tweets that if they did remember, it was me. Right. So what this does is basically logs. And that way, I don't have to keep up with it. It's just I can come back. Whenever
+ 
+Felipe: But you end up with this big thing low.
+ 
+Dave: But it's only about six or seven people. Okay, who I want to know about. So it's not that many tweets. Right? It, it's still the zap runs out because I'm not a premium Zapier user. Yeah. And hard to justify paying for that when if I had the time could write the script to solve the problem for me anyway. Yeah. But that is a step. If lists were a bit easier on Twitter, I think that could be
+ 
+Felipe: I think they're trying to make it easier now. Did you see the new update? The new version of the iOS? You can swipe?
+ 
+Dave: No, oh, no, I haven't tried. 
+ 
+Felipe: Yeah and I and I'm, I'm actually, I'm actually doing that after they change, swipes it basically like tabs on your home screen. And you can just swipe through your lists. And it's, it's fine. Like it works, okay. But like, Dave's looking in his twitter.
+ 
+Like I did it, like, what those things usually do for me, like trying to, like, tweak in and use. Is that they make it more annoying to use the app, and I get more stressed because then it gets into what you were saying of you like getting a notification. But you don't know why because it's the like those, those things that. And I get more stressed because of those things that I'm trying to. And it just doesn't work. It's like a similar thing of not having the app installed, like a native app installed. And using a browser like a browser works fine. You can I can log in, I can see everything there. 
+
+
+
+But it just makes it like a worse experience. So I just download the app again. So like tweaking those, that makes it worse, experiencing using thing usually. And also it doesn't really make me use it less. So I'm still using them, I might be using more even because now I have to swipe through the list. So what I do is I like and I'm sure what I'm gonna do. My next thing is I'm gonna unfollow everything from the lists, and I'm gonna get back to one timeline only and only send in like, it's like I yeah, it's just I don't know, I can't I'll just unfollow people just unfollow profiles.
+
+
+
+If I'm interested in them, I'm going to like manually go and I'll do that sometimes I'm just going to a person in Oh, I wonder what they've been up to. No, check them on my own time, because he just keeps me there. If I come trying to use twitter less. The only like, ideal less means the ideal less would be zero in so if I get there, but like I don't expect to use it because of I actually like Twitter. And I like I like Instagram. I like posting pictures. And I like seeing like pictures of most of my friends. I don't like when they're traveling to all these imposing bunches of Pictures. But yeah, like my solution is I don't I unfollow people and I don't care. Like, you know, I'm not like, oh, I'm going to miss things like you know because I, you might get that. Do you get that?
+ 
+Dave: Yeah, I like it. Honestly, I look at Twitter feed very rarely, in general. So that's not an issue for me. It's that I believe there's content in there that I do care about. But I don't want it mixed in with all the nonsense that I don't care about. That was the point of the lists and then having them go to a Slack channel and the Slack channel is needed. So I don't get the notifications from that channel. Just I see it grayed out in the sidebar. So when I'm free, I can go through and scroll through and look. 
+
+
+
+And if there's something there that I care about at that point, that's grand, if not, I can just mark that conversation that messages unread and comes in later. Or I know that they're all in that one place, and I don't have to go digging for them. So it kind of works.  It's better than what I had before. I've actually found I've seen messages from four or five people that were absolutely the value I knew I was missing. But still, you know, it's not perfect. Of course, I'd rather it just be in my terminal window, as opposed to.
+
+
+
+Felipe: Is there no Twitter Terminal?
+
+
+
+Dave: There is but I have yet to see how it works with just lists.
+
+
+
+Felipe: But like why don't you make your list? Why are you so attached to your home? 
+
+
+
+Dave: It's been able to because I actually want to 
+
+
+
+Felipe: Can you maybe switch them?
+ 
+Dave: They'll take me a lot of time. Yeah, I could probably write a script to do it. But the so like, anytime I'm trying to like tag someone or DM them so like DM is the perfect example. There are a lot of people that I DM that I don't really like. Think I still follow you. But a lot of your tweets are in Portuguese. So I don't want to see that. I mean, you know, but because It means, zero to me.
+ 
+Felipe: Yeah, but why are you following me then?
+ 
+Dave: I might not be anymore. I can't remember
+ 
+Felipe: Why are you not following me, Dave? 
+ 
+Dave: No, like it's gonna be harder to tag you. So that's probably it was easier to follow you. and tag you when I was posting our last episode.
+ 
+Felipe: Yeah.yeah, yeah like
+ 
+Dave: So there are a few reasons. I mean, they're, they're more. A lot of them are about the podcast. But also about Oh, which, which, which one? Which, which Joe was that? I can't remember was that I met at that meetup. You know, I started following because I didn't know, you know, we connected. And now I noticed that Joe, and I've actually talked to him a couple of times. But if I unfollowing because I don't really care for his tweets, not that there's an actual Joe that I'm talking about. Right? So if there is a Joe that I know
+ 
+Felipe: Oh yeah, I know Joe.
+ 
+Dave: So it's that sort of thing. It's that, it's easier. 
+ 
+Felipe: But you do you feel bad unfollowing people like how?
+ 
+Dave: No, it's like that, I don't want to lose them. Lose the ability to find them. I guess I could use the list for that
+ 
+Felipe: You see that's, you mentioned that before. And when you mentioned about Facebook, it's the only way for you to keep keep track or like, see what your friends your kids are up to. And I like I'm not on Facebook anymore. And it took me a while, like to take the like, the courage is not courage, to delete facebook, its not courage at all, like to go there and delete the account and actually delete.
+
+
+
+Because I'm, I'm living in a different country, like, I'm far away from my friends and for my family. And I was like, for a while. That was my thing. Like, oh, if I, if I'm not there, like, they're not gonna, like, they're gonna forget me.I'm gonna fade like, so. And there was, there was a thing because like, I was, I'm not gonna I don't like this. I didn't like, I don't like Facebook anymore for a number of reasons. But I, I felt like, if I wasn't there, I was not I don't exist, almost like there is too dramatic, like, Why Why are they making us we use those terms, to talk about social media. 
+
+
+
+So and then I think was like, talking to friends who just did it the same and he was in they were in like similar situations. But also, when I read the 10 reasons to delete your social media that the book is really good. 
+
+
+
+Dave: The bummer book.
+
+
+
+Felipe: Yeah and one thing that he says that these social media platforms did is and that they, they do constantly is that make you feel that the only way to contact people to reach people. Either that like you, you know, like your, your, your friends or your family. The only way to reach out to them and to talk to them and to see what they're up to is through their platforms. So, like, we didn't have social media into a few years ago, and we were fine. And now we're like, oh, we're so worried that we're going to like basically die if we're not there. And that's like in guy says in the book is like, like why? Why do we feel like that it's not there, there are ways to do better ways to reach out to people and to like, talk to people and have better conversations. 
+
+
+
+Because like, like out, like with family stuff. I was like, Okay, I'm gonna post this, this picture here of like us having, like a nice lunch that made me think of my family that's there. And I think that they will enjoy seeing what we're good here. So I posted that to Facebook. And there's like a bunch of people who I, I don't care anymore, like old friends. I was doing like trying to keep my friend's list kind of neat. So but it was like there's a difference, like people leaving comments that I didn't care about. 
+
+
+
+So why was that I just was not posting anymore. I was not. But that made me more distant from them. So there was that, that I'm there. So I just deleted, deleted Facebook in what I do know is I just messaged them privately. So we have, we have like the group and if I have a picture, just send I send them I send my mom a picture, I call my dad. And I like our like FaceTime him if we're like, you know, in a restaurant that I think he'll like or just and I was using Facebook to do that before. Because these like this really that is the same with friends. Like I thought I was keeping, like, contact with old friends from Brazil that are still there in and I thought that I was like we're still a group of friends on Facebook. But it wasn't really, you know what I mean?
+ 
+Dave: It's I just thought of this. It's more like we've all got telescopes, and we're peaking in everyone's homes. 
+ 
+Felipe: Yeah, exactly. 
+ 
+Dave: Keeping in contact. Which is spying on everybody?
+ 
+Felipe: Just go to, just go to their home and talk to them. Well, like it's we can always do that. And there's always like, I'm, it's like I'm far away. I can talk to them. I can see them every day. I can see it like I hadn't seen my city in years. So it doesn't matter. Like but like so family and friends are the same like I thought I thought they were it was like, there was the illusion of that like our group of friends is still there. But it's it's like too passive it has to be more active. So now is the same now if I want to talk to them, I will actually message them directly instead of like posting something. Yeah. Why did we start talking about that
+ 
+Dave: Why we're reducing on social media.
+ 
+Felipe: Oh, yeah. Oh, yeah. Yeah. So yeah, so no Facebook anymore.
+ 
+Dave: So what messaging platform?
+ 
+Felipe: Telegram. we're using, telegram. But we like main ones probably WhatsApp. Yeah, it's still Facebook. But it's just that it's so
+ 
+Dave: ubiquitous. 
+
+
+
+Felipe: Yeah. Like, there's no, doesn't matter. Like, what? what I, what I, how I feel about it, it matters that like, that's, that's where they are. And it's so yeah, but like, it's the thing is that it's, it's, private. And it's, it's direct. It's like one on one. It's not or, or email like we're using email more also. So just communicate just which is something that we used to do a few years ago, to, like, we could like DM people, just email them. But now we think that the only way to reach two people is through those. Like it helps a lot. But it's it's not the only way. Do you know what I mean?
+ 
+Dave: I do. I don't know, I was thinking about that the other day about email? Because I almost have gotten my email under control. Right? Almost. Still a couple of hundred too many emails in their inbox the moment but it's better than 4000 I had
+ 
+Felipe: so much so much
+ 
+Dave: As I unsubscribe from almost every newsletter, just because it's just too many things. Yeah. But then all the different tools email me slack emails, me. I got it. Well, I mean, but it's invoices and receipts. And yet to figure out how to well actually sometimes the slack updates about what's going on within our workspace. Sometimes that's useful, okay. So it tells me where the messages are going. When users become active or inactive. So that's good for keeping, you know, track of the costs of, of slack and everything. But you know, however many tools we have, again, at least two emails a month from every single one of them, at least to heads up. And then if there's an issue, or if there's a specific update that you know, so there's that we have 20 30 40 tools that we use, yeah, that's, that's, you know, somewhere between 80 and 500 emails in a month. 
+ 
+Felipe: That's a lot.
+ 
+Dave: And some of those in a number of those I have to action. So taking the invoices and getting them into our accounting system. And then all the emails from like, JIRA and Confluence. Those I could probably do with less of and I use rules to help. Still, sometimes I need them. Not as often as I don't need them. But still, there's no way to say only show me the ones that I need to know about  because there's no way to know when that's gonna happen.
+ 
+Felipe: Yeah I know, it's hard. Yeah.
+ 
+Dave: Maybe I'll use a different email for actual human communication.
+ 
+Felipe: You do.
+ 
+Dave: I said maybe I will.
+ 
+Felipe: Yeah, I do have two emails.
+ 
+Dave: So I've got four or five, right? They're all for different stuff. I mean, that my personal email is really not my personal email. Right. I don't know the last time I got air quote, personal email. Yeah, it's password resets and all sorts of stuff like that, that you have to get but like an actual email from a person? No, that was not about something I needed to do. It's like bills and junk. Just like home. That's all he gives me. More bills and junk. No, I'm just gonna start writing letters. 
+ 
+Felipe: Yeah. Sure.
+ 
+Dave: Nobody will be able to read them because of my handwriting.
+ 
+Felipe: You can just type them. 
+ 
+Dave: Oh, yeah. I have to get a manual typewriter.
+ 
+Felipe: And you don't have to go that far. Just read them. 
+ 
+Dave: Really? Hemingway.
+ 
+Felipe: Yeah.
+ 
+Dave: What else is on your mind?
+ 
+Felipe: Nothing. Nothing else. No, just social media.
+ 
+Dave: I was thinking the Eisenhower matrix might have been
+ 
+Felipe: Oh, yeah, we can talk about that.
+ 
+Dave: So for those that don't know. It's
+ 
+Felipe: We'll talk about it now, though. 
+ 
+Dave: Oh, we can save it. 
+ 
+Felipe: Yeah. Let's save it.
+ 
+Dave: Okay, well save it, teaser.
+ 
+Felipe: This is not too long. Maybe. How. how long was it?
+ 
+Dave: That's we're 35 minutes.
+ 
+Felipe: Yeah, what do you think?
+ 
+Dave: Yeah, we could wrap it up?
+ 
+Felipe: Yeah. Let's lets me try and keep like,
+ 
+Dave: maybe one topic. Yeah. Yeah, unless they're really small. Yeah, yes. We can talk about that probably twice as long.
+ 
+Felipe: Oh, yeah. Yeah. 
+ 
+Dave: That's good call. Good call. Cool. All right. So anything else before we leave them?
+ 
+Felipe: I'm good. Good for the next one.
+ 
+Dave: And since you're off of all social media, how can people reach you? 
+ 
+Felipe: You can reach me on Twitter and Instagram. 
+ 
+Dave: So off of social media is not the right word.
+ 
+Felipe: That's the thing like we were talking. There's no like, I tweet in Portuguese. Why would like why control me?
+ 
+Dave: But if somebody had something they wanted to, to talk about about what you've said. Or response or query.
+ 
+Felipe: I met. I am on Twitter. @seufelipe,  SEUFELIPE and Instagram, the same. In letterbox, that's a social media that I like, letterboxed. 
+ 
+Dave: Might as well talk about that more in the future as well?
+ 
+Felipe: In the next episode.
+ 
+Dave: And I am @dave_albert, and you can reach me at podcast@dave-albert.com. So, thanks for joining me Felipe. 
+
+
+
+Felipe: Thank you. Thanks for having me. 
+
+
+
+And thank you all for listening. Until next time, remember any sufficiently advanced technology is indistinguishable from magic.
+
+ 
+ 
+ 
+
